tests/parser/fail/param-name-collision.som
"test:
failMessage:
  - contains: foo
  - contains: defined twice
"

ParamNameCollision = (
  bar: foo bar: spam bar: foo = (42)
)
